[gd_scene load_steps=9 format=3 uid="uid://81x1mmmcht5j"]

[ext_resource type="Script" uid="uid://c1u6hb0b3nscy" path="res://scripts/MenuButtons.gd" id="1"]
[ext_resource type="Script" uid="uid://vs4hl3vyghm5" path="res://scripts/SettingsMenu.gd" id="2"]
[ext_resource type="FontFile" uid="uid://cvysbiubrkpfa" path="res://fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="3"]
[ext_resource type="FontFile" path="res://fonts/GUI_60.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://b26nan6i3i8po" path="res://scenes/Background.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://bcxkvhds4i2xn" path="res://icons/mute_off.png" id="6"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/47/0/ascent = 0.0
cache/0/47/0/descent = 0.0
cache/0/47/0/underline_position = 0.0
cache/0/47/0/underline_thickness = 0.0
cache/0/47/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/49/0/ascent = 0.0
cache/0/49/0/descent = 0.0
cache/0/49/0/underline_position = 0.0
cache/0/49/0/underline_thickness = 0.0
cache/0/49/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/52/0/ascent = 0.0
cache/0/52/0/descent = 0.0
cache/0/52/0/underline_position = 0.0
cache/0/52/0/underline_thickness = 0.0
cache/0/52/0/scale = 1.0
cache/0/53/0/ascent = 0.0
cache/0/53/0/descent = 0.0
cache/0/53/0/underline_position = 0.0
cache/0/53/0/underline_thickness = 0.0
cache/0/53/0/scale = 1.0
cache/0/54/0/ascent = 0.0
cache/0/54/0/descent = 0.0
cache/0/54/0/underline_position = 0.0
cache/0/54/0/underline_thickness = 0.0
cache/0/54/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/120/0/ascent = 0.0
cache/0/120/0/descent = 0.0
cache/0/120/0/underline_position = 0.0
cache/0/120/0/underline_thickness = 0.0
cache/0/120/0/scale = 1.0
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0

[node name="Settings" type="Node2D"]
script = ExtResource("2")

[node name="Background" parent="." instance=ExtResource("5")]

[node name="Title" type="Label" parent="."]
offset_right = 644.0
offset_bottom = 254.0
scale = Vector2(0.9, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 80
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="Node2D" parent="."]
script = ExtResource("1")

[node name="Sound" type="Label" parent="MenuButtons"]
offset_top = 254.0
offset_right = 520.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Sound volume:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Intensity" type="HSlider" parent="MenuButtons/Sound"]
layout_mode = 0
offset_left = 17.0
offset_top = 69.0
offset_right = 460.0
offset_bottom = 96.0
min_value = -80.0
max_value = 0.0

[node name="mute" type="Button" parent="MenuButtons/Sound"]
layout_mode = 0
offset_left = 520.0
offset_top = 6.0
offset_right = 564.0
offset_bottom = 49.0
icon = ExtResource("6")
flat = true

[node name="value" type="Label" parent="MenuButtons/Sound"]
layout_mode = 0
offset_left = 458.0
offset_top = 56.0
offset_right = 578.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Blocks" type="Button" parent="MenuButtons"]
offset_top = 369.0
offset_right = 576.0
offset_bottom = 491.0
flat = true

[node name="Label" type="Label" parent="MenuButtons/Blocks"]
layout_mode = 0
offset_right = 580.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 40
text = "Blocks:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Color" type="Label" parent="MenuButtons/Blocks"]
layout_mode = 0
offset_top = 54.0
offset_right = 580.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "color/grey"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BelowDestroyed" type="Button" parent="MenuButtons"]
offset_top = 559.0
offset_right = 576.0
offset_bottom = 671.0
flat = true

[node name="Label" type="Label" parent="MenuButtons/BelowDestroyed"]
layout_mode = 0
offset_right = 580.0
offset_bottom = 56.0
pivot_offset = Vector2(514, 59)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Below removed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingsBehavior" type="Label" parent="MenuButtons/BelowDestroyed"]
layout_mode = 0
offset_top = 56.0
offset_right = 580.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "Destroy/Fall"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MenuButtons"]
offset_top = 930.0
offset_right = 580.0
offset_bottom = 996.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Back"
flat = true

[node name="SetNickname" type="Button" parent="MenuButtons"]
offset_top = 720.0
offset_right = 576.0
offset_bottom = 851.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
flat = true

[node name="Label" type="Label" parent="MenuButtons/SetNickname"]
layout_mode = 0
offset_right = 580.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Set Nickname"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DefaultNickname" type="Label" parent="MenuButtons/SetNickname"]
layout_mode = 0
offset_top = 75.0
offset_right = 580.0
offset_bottom = 131.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 32
text = "____________"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" parent="MenuButtons/SetNickname" instance=ExtResource("5")]
visible = false
position = Vector2(0, -720)

[node name="insert name" type="Label" parent="MenuButtons/SetNickname/Background"]
offset_top = 254.0
offset_right = 576.0
offset_bottom = 337.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Please insert
your name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" type="LineEdit" parent="MenuButtons/SetNickname/Background/insert name"]
layout_mode = 0
offset_top = 140.0
offset_right = 580.0
offset_bottom = 217.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 38
max_length = 9

[node name="Submit" type="Button" parent="MenuButtons/SetNickname/Background"]
offset_top = 930.0
offset_right = 580.0
offset_bottom = 996.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 38
text = "Ok!"
flat = true

[connection signal="value_changed" from="MenuButtons/Sound/Intensity" to="." method="_set_volume"]
[connection signal="pressed" from="MenuButtons/Sound/mute" to="." method="_toggle_mute"]
[connection signal="pressed" from="MenuButtons/Blocks" to="." method="_change_color"]
[connection signal="pressed" from="MenuButtons/BelowDestroyed" to="." method="_change_remainings"]
[connection signal="pressed" from="MenuButtons/Back" to="MenuButtons" method="back_pressed"]
[connection signal="pressed" from="MenuButtons/SetNickname" to="." method="_set_nickname"]
[connection signal="pressed" from="MenuButtons/SetNickname/Background/Submit" to="." method="_change_nickname"]
